<?xml version="1.0"?>
<package format="2">
  <name>fet_bringup</name>
  <version>0.0.1</version>
  <description>
    The fet_bringup package
  </description><maintainer email="zhl017@todo.todo">zhl017</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>turtlebot3_msgs</depend>
  <exec_depend>fet_description</exec_depend>
  <exec_depend>fet_teleop</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>hls_lfcd_lds_driver</exec_depend>
</package>
