<?xml version="1.0"?>
<package format="2">
  <name>fet_description</name>
  <version>0.0.1</version>
  <description>The fet_description package</description>
  <maintainer email="zhl017@todo.todo">zhl017</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
</package>
