<?xml version="1.0"?>
<package format="2">
  <name>fet_example</name>
  <version>0.0.1</version>
  <description>The fet_example package</description>
  <maintainer email="zhl017@todo.todo">zhl017</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>turtlebot3_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>fet_bringup</exec_depend>
</package>
