<?xml version="1.0"?>
<package format="2">
  <name>fet_navigation</name>
  <version>0.0.1</version>
  <description>The fet_navigation package</description>
  <maintainer email="zhl017@todo.todo">zhl017</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>fet_bringup</exec_depend>
</package>
