<?xml version="1.0"?>
<package format="2">
  <name>fet_slam</name>
  <version>0.0.1</version>
  <description>The fet_slam package</description>
  <maintainer email="zhl017@todo.todo">zhl017</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>fet_bringup</exec_depend>
</package>
