<?xml version="1.0"?>
<package format="2">
  <name>fet_teleop</name>
  <version>0.0.1</version>
  <description>The fet_teleop package</description>
  <maintainer email="zhl017@todo.todo">zhl017</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
</package>
