<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_fet</name>
  <version>0.0.1</version>
  <description>
    The turtlebot3_fet package (meta package)
  </description>
  <maintainer email="zhl017@todo.todo">zhl017</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>fet_bringup</exec_depend>
  <exec_depend>fet_description</exec_depend>
  <exec_depend>fet_example</exec_depend>
  <exec_depend>fet_navigation</exec_depend>
  <exec_depend>fet_slam</exec_depend>
  <exec_depend>fet_teleop</exec_depend>
  <export><metapackage/></export>
</package>
